feat(profil): modification de profil fonctionnel
